# src/controllers/staffController.js
@@ -64,7 +64,7 @@ export const findAndCountAll = async (req, res) => {
  * @param {object} res - The response object.
  */
 export const findById = async (req, res) => {
-  const { accountId, userId } = req.params;
+  const { accountId, staffId } = req.params;
   const requestUser = req._user;
 
   if (!permissionHelper.canReadAccount(requestUser, accountId)) {
@@ -72,13 +72,40 @@ export const findById = async (req, res) => {
     return;
   }
 
-  const staff = await staffService.findById(userId);
+  const staff = await staffService.findById(staffId);
   if (!staff) {
     responseHelper.notFound(res, errorMessages.USER_NOT_FOUND);
     return;
   }
 
   responseHelper.ok(res, staff);
+};
+
+/**
+ * Handler for PUT /accounts/{accountId}/staff/{staffId}
+ *
+ * @param {object} req - The request object.
+ * @param {object} res - The response object.
+ */
+export const updateById = async (req, res) => {
+  const { accountId, staffId } = req.params;
+  const payload = req.body;
+  const requestUser = req._user;
+
+  if (!permissionHelper.canReadAccount(requestUser, accountId)) {
+    responseHelper.forbidden(res, errorMessages.AUTHORIZATION_NOT_VALID);
+    return;
+  }
+
+  const staff = await staffService.findById(staffId);
+  if (!staff) {
+    responseHelper.notFound(res, errorMessages.USER_NOT_FOUND);
+    return;
+  }
+
+  let response = await staffService.updateById(staffId, payload);
+  response = _.omit(response, 'password');
+  responseHelper.ok(res, response);
 };
 
 /**
