# src/openapi/api.yml
@@ -1218,6 +1218,106 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/InternalServerError'
+    put:
+      tags:
+        - Staff 👨‍🏫
+      security:
+        - bearerAuth: []
+      summary: Update a specific staff member by ID
+      description: Update a specific staff member by its unique ID.
+      x-eov-operation-handler: staffController
+      operationId: updateById
+      parameters:
+        - in: path
+          name: accountId
+          schema:
+            type: string
+            description: The unique identifier for the account (UUIDv4).
+            example: '123e4567-e89b-12d3-a456-426614174000'
+          required: true
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                name:
+                  type: string
+                  description: The name of the new staff member.
+                  example: John Doe
+                type:
+                  type: string
+                  description: The type of the new staff member
+                  example: ACCOUNT_ADMIN
+                  enum:
+                    - ACCOUNT_ADMIN
+                    - APPLICATION_USER
+                enabled:
+                  type: boolean
+                  description: A flag indicating whether the application is enabled.
+                  example: true
+                  default: true
+              additionalProperties: false
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  statusCode:
+                    type: integer
+                    description: HTTP status code indicating success.
+                    default: 200
+                  message:
+                    type: string
+                    description: Descriptive message of the success.
+                    default: OK
+                  data:
+                    $ref: '#/components/schemas/Staff'
+                required:
+                  - statusCode
+                  - message
+                  - data
+                additionalProperties: false
+        400:
+          description: Bad Request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/BadRequest'
+        401:
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Unauthorized'
+        403:
+          description: Forbidden
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Forbidden'
+        404:
+          description: Not Found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/NotFound'
+        409:
+          description: Conflict
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Conflict'
+        500:
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/InternalServerError'
     delete:
       tags:
         - Staff 👨‍🏫
